# backend

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  setup.cfg
apps/accounts/: apps.py  authentication.py  models.py  selectors.py  services.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/tests/: conftest.py  test_api_views.py  test_security.py  test_services.py
apps/common/: exceptions.py  models.py  services.py
apps/common/xlib/: enums.py  exceptions.py  permissions.py  validators.py
apps/finance/: models.py  selectors.py  services.py
apps/finance/migrations/: 0001_initial.py
apps/finance/tests/: conftest.py
apps/hrm/: models.py  selectors.py  services.py
apps/hrm/migrations/: 0001_initial.py
apps/hrm/tests/: conftest.py
apps/inventory/: models.py  selectors.py  services.py
apps/inventory/migrations/: 0001_initial.py
apps/inventory/tests/: conftest.py  factories.py  test_api_contracts.py  test_api_views.py  test_integration_flows.py  test_permissions.py  test_security.py  test_selectors.py  test_stock_in.py  test_stock_issue.py  test_stock_transfer.py
apps/manufacturing/: models.py  selectors.py  services.py
apps/manufacturing/migrations/: 0001_initial.py
apps/manufacturing/tests/: conftest.py
apps/master_data/: models.py  selectors.py  services.py
datn_backend/: asgi.py  settings.py  settings_router.py  urls.py  wsgi.py
datn_backend/settings/: base.py  dev.py  production.py  test.py
requirements/: base.txt  dev.txt
(+21 files in other folders)
